# searchad_devkit

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
examples/: check_searchad_setup.py  check_searchad_setup.sh  create_dummy_predictions.py  create_dummy_predictions.sh  create_submission_file.py  create_submission_file.sh  download_dataset.py  download_dataset.sh  evaluate.py  evaluate.sh  prepare_image_level_annotations.py  prepare_image_level_annotations.sh  print_dataset_statistics.py  print_dataset_statistics.sh  prune_searchad_datasets.py  prune_searchad_datasets.sh  visualize_bbox_labels.py  visualize_bbox_labels.sh  visualize_retrieval.py  visualize_retrieval.sh  visualize_support_sets.py  visualize_support_sets.sh
searchad/: check_searchad_setup.py  create_dummy_predictions.py  create_submission_file.py  download_dataset.py  evaluate.py  prepare_image_level_annotations.py  print_dataset_statistics.py  prune_searchad_datasets.py  visualize_bbox_labels.py  visualize_retrieval.py  visualize_support_sets.py
searchad/config/: config.py
searchad/utils/: checks.py  io.py  metrics.py  visualization.py
